# hs-ari-beseder

./: README.md  hie.yaml  hs-ari-beseder.cabal  stack.yaml
app/: Main.hs
dialerApp/: DialTimerApp.hs  MainDialer.hs  SimRingCallApp.hs  SimRingCallApp2.hs  TwoWayCallApp.hs
incomingApp/: AnswerIncomingCallApp.hs  AnswerMicroIVRApp.hs  IncomingTest.hs  RouteIncomingCallApp.hs  RouteIncomingCallApp2.hs
src/Beseder/ARI/: ARIBridge.hs  ARICallProv.hs  ARICallProvImpl.hs  ARIData.hs  ARIHelper.hs  ARIMonad.hs  ARIPlayerProv.hs  ARIPlayerProvImpl.hs  ARIRunner.hs  DTMFContainer.hs  DTMFMonitor.hs  DTMFMonitorHelper.hs
